@@ -1,3 +1,9 @@
+Mon Jan 31 13:37:48 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
+
+	* ace/Acceptor.cpp (handle_close): Fixed the code so that it
+	  closes down properly.  Thanks to Kobi Cohen-Arazi
+ 	  <kobi.cohenarazi@gmail.com> for this fix.
+
 Mon Jan 31 11:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Service_Config.h:
